[tool.poetry]
name = "vertua"
version = "0.1.0"
description = "Automate Everything Everywhere"
authors = ["estill01 <ehs.stillman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
